2009-03-07  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* client_examples/SDLvncviewer.c: make the viewer resizable

2009-03-06  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* client_examples/SDLvncviewer.c: enable key repeat

2009-02-03  Mike Frysinger <vapier@gentoo.org>
	* autogen.sh, configure.ac, **/Makefile.am: major automake cleanups

2009-01-04  Karl Runge <runge@karlrunge.com>
	* configure.ac, CMakeLists.txt: set LibVNCServer version to 0.9.7

2009-01-04  Karl Runge <runge@karlrunge.com>
	* prepare_x11vnc_dist.sh: fix SUBDIRS and DIST_SUBDIRS when using
	  --with-system-libvncserver

2008-06-03  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* client_examples/SDLvncviewer.c: fix update after resize

2008-02-18  Christian Ehrlicher <Ch.Ehrlicher@gmx.de>
	* libvncserver/rfbregion.c: please MS Visual C++

2008-02-04  Noriaki Yamazaki <micro-vnc@ias.hitachi-system.co.jp>
	* libvncclient/rfbproto.c, libvncclient/zrle.c: Add ZYWRLE
		support to LibVNCClient

2008-02-04  Noriaki Yamazaki <micro-vnc@ias.hitachi-system.co.jp>
	* libvncserver/zywrletemplate.c: Fix mis encode/decode when
		width != scanline

2008-02-02  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* client_examples/SDLvncviewer.c: fix buttons (2 & 3 were switched),
		fix Tab key, and fix Ctrl+<letter>

2008-01-29  Christian Ehrlicher <Ch.Ehrlicher@gmx.de>
	* libvncserver/rfbserver.c: add missing #include <time.h>

2008-01-28  Noriaki Yamazaki <micro-vnc@ias.hitachi-system.co.jp>
	*  rfb/rfbproto.h, libvncserver/rfbserver.c, libvncserver/scale.c,
	   libvncserver/zrle.c, libvncserver/zrleencodetemplate.c,
	   libvncserver/zywrletemplate.c: add (server-side) ZYWRLE support,
		and fix a few endian/scale errors

2008-01-27  Christian Ehrlicher <Ch.Ehrlicher@gmx.de>
	* CMakeLists, rfb/rfbconfig.h.cmake, rfb/rfbint.h.cmake:
	  support CMake

2007-09-04  Karl Runge <runge@karlrunge.com>
	* classes/ssl: improve timeouts, port fallback, and connection